added al Chendo new exploits

--- a/index.html
+++ b/index.html
@@ -2,12 +2,34 @@
 <title>PS4 Exploits</title>
 </head>
 <body style="background-color:#050505;">
+<center>
 <h1 style="color: white;text-align: center;"><span style="text-decoration: underline;"><em><strong>PS4 Exploits</strong></em></span></h1>
 <table style="margin-left: auto;margin-right: auto;color: orange;">
 <tbody>
 <tr>
-<td><a href="672-chendo/index.html">Chendo 6.72 exploit</a></td>
+<td><a style="color: #cc0000;font-size: 20px;" href="672-chendo/index.html">Chendo 6.72 exploit</a></td>
 </tr>
+<tr>
+<td><a style="color: #cc0000;font-size: 20px;" href="650-651-chendo/index.html">Chendo 6.50-6.51 exploit</a></td>
+</tr>
+<tr>
+<td><a style="color: #cc0000;font-size: 20px;" href="620-chendo/index.html">Chendo 6.20 exploit</a></td>
+</tr>
+<tr>
+<td><a style="color: #cc0000;font-size: 20px;" href="600-602-chendo/index.html">Chendo 6.00-6.02 exploit</a></td>
+</tr>
+<tr>
+<td><a style="color: #cc0000;font-size: 20px;" href="555-556-chendo/index.html">Chendo 5.55-5.56 exploit</a></td>
+</tr>
+<tr>
+<td><a style="color: #cc0000;font-size: 20px;" href="550-chendo/index.html">Chendo 5.50 exploit</a></td>
+</tr>
+<tr>
+<td><a style="color: #cc0000;font-size: 20px;" href="505-chendo/index.html">Chendo 5.05 exploit</a></td>
+</tr>
+<tr
 </tbody>
 </table>
+</center>
+<p style="color: white;text-align: center;">Note: I haven't created any of these exploits, I am just hosting them. They were all created by ChendoChap</p>
 </body></html>
